Renamed existing classes and revamped menu.

--- a/entrega 01-grupo 2/entrega 01-grupo 2/entrega 01-grupo 2.csproj
+++ b/entrega 01-grupo 2/entrega 01-grupo 2/entrega 01-grupo 2.csproj
@@ -43,9 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
-    <Compile Include="Class2.cs" />
-    <Compile Include="Class3.cs" />
+    <Compile Include="River.cs" />
+    <Compile Include="Terrain.cs" />
+    <Compile Include="Farm.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
