--- a/entrega 01-grupo 2/entrega 01-grupo 2/entrega 01-grupo 2.csproj
+++ b/entrega 01-grupo 2/entrega 01-grupo 2/entrega 01-grupo 2.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class1.cs" />
     <Compile Include="River.cs" />
     <Compile Include="Terrain.cs" />
     <Compile Include="Farm.cs" />
