--- a/entrega 2 grupo 2/entrega 01-grupo 2/entrega 01-grupo 2.csproj
+++ b/entrega 2 grupo 2/entrega 01-grupo 2/entrega 01-grupo 2.csproj
@@ -57,7 +57,7 @@
     <Compile Include="Farm.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="tiempo %28turnos%29.cs" />
+    <Compile Include="juego %28turnos%29.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
