--- a/entrega 2 grupo 2/entrega 01-grupo 2/entrega 01-grupo 2.csproj
+++ b/entrega 2 grupo 2/entrega 01-grupo 2/entrega 01-grupo 2.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="cattle.cs" />
+    <Compile Include="Food.cs" />
+    <Compile Include="PestControl.cs" />
     <Compile Include="RiverLake.cs" />
     <Compile Include="Consumable.cs" />
     <Compile Include="FinishedProduct.cs" />
@@ -58,6 +60,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="juego %28turnos%29.cs" />
+    <Compile Include="Vaccines.cs" />
     <Compile Include="Water.cs" />
   </ItemGroup>
   <ItemGroup>
