--- a/entrega 2 grupo 2/entrega 01-grupo 2/entrega 01-grupo 2.csproj
+++ b/entrega 2 grupo 2/entrega 01-grupo 2/entrega 01-grupo 2.csproj
@@ -50,10 +50,10 @@
     <Compile Include="Consumable.cs" />
     <Compile Include="FinishedProduct.cs" />
     <Compile Include="hereda2.cs" />
-    <Compile Include="edificacion.cs" />
+    <Compile Include="Edification.cs" />
     <Compile Include="Mercado.cs" />
     <Compile Include="producto.cs" />
-    <Compile Include="plantation.cs" />
+    <Compile Include="Plantation.cs" />
     <Compile Include="StorageBuilding.cs" />
     <Compile Include="Terrain.cs" />
     <Compile Include="Farm.cs" />
