Mas avances en Edificaciones

--- a/entrega 2 grupo 2/entrega 01-grupo 2/entrega 01-grupo 2.csproj
+++ b/entrega 2 grupo 2/entrega 01-grupo 2/entrega 01-grupo 2.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="cattle.cs" />
+    <Compile Include="Cattle.cs" />
     <Compile Include="Food.cs" />
     <Compile Include="PestControl.cs" />
     <Compile Include="RiverLake.cs" />
