--- a/entrega 3 grupo 2/entrega 01-grupo 2/entrega 01-grupo 2.csproj
+++ b/entrega 3 grupo 2/entrega 01-grupo 2/entrega 01-grupo 2.csproj
@@ -43,10 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="entrega 03\Administrar_produccion_agregar_agua_o_comida.cs" />
-    <Compile Include="entrega 03\Administrar_almacenamiento.cs" />
+    <Compile Include="entrega x\Administrar_produccion_agregar_agua_o_comida.cs" />
+    <Compile Include="entrega x\Administrar_almacenamiento.cs" />
     <Compile Include="Animal.cs" />
+    <Compile Include="entrega 03\CompraAlmacenamiento.cs" />
     <Compile Include="entrega 03\CompraConsumible.cs" />
+    <Compile Include="entrega 03\CompraGanado.cs" />
+    <Compile Include="entrega 03\CompraPlantacion.cs" />
     <Compile Include="entrega 03\VentaDestruir.cs" />
     <Compile Include="FunctionBrain.cs" />
     <Compile Include="Cattle.cs" />
@@ -56,15 +59,14 @@
     <Compile Include="consumibles\Pesticide.cs" />
     <Compile Include="consumibles\Herbicide.cs" />
     <Compile Include="consumibles\Fungicide.cs" />
-    <Compile Include="entrega 03\Administrar_produccion_aplicar_cura.cs" />
-    <Compile Include="entrega 03\administrar_produccion_Obtener_producto_terminado.cs" />
-    <Compile Include="entrega 03\Grabar_la_partida.cs" />
+    <Compile Include="entrega x\Administrar_produccion_aplicar_cura.cs" />
+    <Compile Include="entrega x\administrar_produccion_Obtener_producto_terminado.cs" />
+    <Compile Include="entrega x\Grabar_la_partida.cs" />
     <Compile Include="entrega 03\Ir_al_mercado_de_consumibles.cs" />
     <Compile Include="entrega 03\Ir_al_mercado_de_edificaciones.cs" />
     <Compile Include="entrega 03\Ir_al_mercado_de_propiedades.cs" />
     <Compile Include="entrega 03\lista de semillas.cs" />
-    <Compile Include="entrega 03\Pasar_de_turno.cs" />
-    <Compile Include="entrega 03\precios_30_turnos.cs" />
+    <Compile Include="entrega x\Pasar_de_turno.cs" />
     <Compile Include="entrega 03\Revisar_los_precios_históricos_por_semilla.cs" />
     <Compile Include="ObjectBrain.cs" />
     <Compile Include="Product.cs" />
@@ -87,5 +89,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
