--- a/entrega 3 grupo 2/entrega 3 grupo 2 solo diccionario NO mapa/entrega 3 grupo 2 solo diccionario NO mapa.csproj
+++ b/entrega 3 grupo 2/entrega 3 grupo 2 solo diccionario NO mapa/entrega 3 grupo 2 solo diccionario NO mapa.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B1313FDC-45B6-4CA2-A678-228B87F27A53}</ProjectGuid>
+    <ProjectGuid>{06C6B75F-918F-49B4-A0AA-38C9CC548268}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>entrega_01_grupo_2</RootNamespace>
-    <AssemblyName>entrega 01-grupo 2</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <RootNamespace>entrega_3_grupo_2_solo_diccionario_NO_mapa</RootNamespace>
+    <AssemblyName>entrega 3 grupo 2 solo diccionario NO mapa</AssemblyName>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -43,55 +43,54 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="bloqueAguaTierra.cs" />
-    <Compile Include="entrega 03\CompraTerreno.cs" />
-    <Compile Include="entrega x\Administrar_produccion_agregar_agua_o_comida.cs" />
-    <Compile Include="entrega x\Administrar_almacenamiento.cs" />
     <Compile Include="Animal.cs" />
+    <Compile Include="bloqueAguaTierra.cs" />
+    <Compile Include="cattle.cs" />
+    <Compile Include="Consumable.cs" />
+    <Compile Include="consumibles\fertilizer.cs" />
+    <Compile Include="consumibles\Food.cs" />
+    <Compile Include="consumibles\Fungicide.cs" />
+    <Compile Include="consumibles\Herbicide.cs" />
+    <Compile Include="consumibles\irrigation.cs" />
+    <Compile Include="consumibles\Pesticide.cs" />
+    <Compile Include="consumibles\Vaccines.cs" />
+    <Compile Include="consumibles\Water.cs" />
+    <Compile Include="Edification.cs" />
     <Compile Include="entrega 03\CompraAlmacenamiento.cs" />
     <Compile Include="entrega 03\CompraConsumible.cs" />
     <Compile Include="entrega 03\CompraGanado.cs" />
     <Compile Include="entrega 03\CompraPlantacion.cs" />
-    <Compile Include="entrega 03\VentaDestruir.cs" />
-    <Compile Include="FunctionBrain.cs" />
-    <Compile Include="Cattle.cs" />
-    <Compile Include="consumibles\fertilizer.cs" />
-    <Compile Include="consumibles\Food.cs" />
-    <Compile Include="consumibles\irrigation.cs" />
-    <Compile Include="consumibles\Pesticide.cs" />
-    <Compile Include="consumibles\Herbicide.cs" />
-    <Compile Include="consumibles\Fungicide.cs" />
-    <Compile Include="entrega x\Administrar_produccion_aplicar_cura.cs" />
-    <Compile Include="entrega x\administrar_produccion_Obtener_producto_terminado.cs" />
-    <Compile Include="entrega x\Grabar_la_partida.cs" />
+    <Compile Include="entrega 03\CompraTerreno.cs" />
     <Compile Include="entrega 03\Ir_al_mercado_de_consumibles.cs" />
     <Compile Include="entrega 03\Ir_al_mercado_de_edificaciones.cs" />
     <Compile Include="entrega 03\Ir_al_mercado_de_propiedades.cs" />
     <Compile Include="entrega 03\lista de semillas.cs" />
-    <Compile Include="entrega x\Pasar_de_turno.cs" />
     <Compile Include="entrega 03\Revisar_los_precios_históricos_por_semilla.cs" />
-    <Compile Include="MapPrinter.cs" />
-    <Compile Include="ObjectBrain.cs" />
-    <Compile Include="Product.cs" />
-    <Compile Include="RiverLake.cs" />
-    <Compile Include="Consumable.cs" />
-    <Compile Include="FinishedProduct.cs" />
-    <Compile Include="Edification.cs" />
-    <Compile Include="Market.cs" />
-    <Compile Include="Plantation.cs" />
-    <Compile Include="Seed.cs" />
-    <Compile Include="StorageBuilding.cs" />
+    <Compile Include="entrega 03\VentaDestruir.cs" />
+    <Compile Include="entrega x\Administrar_almacenamiento.cs" />
+    <Compile Include="entrega x\Administrar_produccion_agregar_agua_o_comida.cs" />
+    <Compile Include="entrega x\Administrar_produccion_aplicar_cura.cs" />
+    <Compile Include="entrega x\administrar_produccion_Obtener_producto_terminado.cs" />
+    <Compile Include="entrega x\Grabar_la_partida.cs" />
+    <Compile Include="entrega x\Pasar_de_turno.cs" />
     <Compile Include="Farm.cs" />
+    <Compile Include="FinishedProduct.cs" />
+    <Compile Include="FunctionBrain.cs" />
+    <Compile Include="juego %28turnos%29.cs" />
+    <Compile Include="MapPrinter.cs" />
+    <Compile Include="Market.cs" />
+    <Compile Include="ObjectBrain.cs" />
+    <Compile Include="plantation.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="juego %28turnos%29.cs" />
-    <Compile Include="consumibles\Vaccines.cs" />
-    <Compile Include="consumibles\Water.cs" />
+    <Compile Include="RiverLake.cs" />
+    <Compile Include="Seed.cs" />
+    <Compile Include="StorageBuilding.cs" />
     <Compile Include="Terrain.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
