--- a/entrega 3 grupo 2/entrega 3 grupo 2 solo seleccion de mapa NO diccionario/entrega 3 grupo 2 solo seleccion de mapa NO diccionario.csproj
+++ b/entrega 3 grupo 2/entrega 3 grupo 2 solo seleccion de mapa NO diccionario/entrega 3 grupo 2 solo seleccion de mapa NO diccionario.csproj
@@ -55,6 +55,7 @@
     <Compile Include="consumibles\Vaccines.cs" />
     <Compile Include="consumibles\Water.cs" />
     <Compile Include="Edification.cs" />
+    <Compile Include="EdifMarket.cs" />
     <Compile Include="entrega 03\CompraAlmacenamiento.cs" />
     <Compile Include="entrega 03\CompraConsumible.cs" />
     <Compile Include="entrega 03\CompraGanado.cs" />
