--- a/entrega 3 grupo 2/entrega 3 grupo 2 solo seleccion de mapa NO diccionario/entrega 3 grupo 2 solo seleccion de mapa NO diccionario.csproj
+++ b/entrega 3 grupo 2/entrega 3 grupo 2 solo seleccion de mapa NO diccionario/entrega 3 grupo 2 solo seleccion de mapa NO diccionario.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Seed.cs" />
     <Compile Include="StorageBuilding.cs" />
     <Compile Include="Terrain.cs" />
+    <Compile Include="Tomato.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
