--- a/entrega 3 grupo 2/entrega 3 grupo 2 solo seleccion de mapa NO diccionario/entrega 3 grupo 2 solo seleccion de mapa NO diccionario.csproj
+++ b/entrega 3 grupo 2/entrega 3 grupo 2 solo seleccion de mapa NO diccionario/entrega 3 grupo 2 solo seleccion de mapa NO diccionario.csproj
@@ -80,6 +80,7 @@
     <Compile Include="MapPrinter.cs" />
     <Compile Include="Market.cs" />
     <Compile Include="object adminitrator.cs" />
+    <Compile Include="object mercado.cs" />
     <Compile Include="object turns.cs" />
     <Compile Include="ObjectBrain.cs" />
     <Compile Include="plantation.cs" />
