--- a/entrega 3 grupo 2/entrega 3 grupo 2 solo seleccion de mapa NO diccionario/entrega 3 grupo 2 solo seleccion de mapa NO diccionario.csproj
+++ b/entrega 3 grupo 2/entrega 3 grupo 2 solo seleccion de mapa NO diccionario/entrega 3 grupo 2 solo seleccion de mapa NO diccionario.csproj
@@ -82,11 +82,13 @@
     <Compile Include="juego %28turnos%29.cs" />
     <Compile Include="MapPrinter.cs" />
     <Compile Include="Market.cs" />
+    <Compile Include="Messages.cs" />
     <Compile Include="object adminitrator.cs" />
     <Compile Include="object turns.cs" />
     <Compile Include="ObjectBrain.cs" />
     <Compile Include="plantation.cs" />
     <Compile Include="PlantationPurchase.cs" />
+    <Compile Include="PriceHistoryMaker.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
